[package]
name = "nso-log-reader"
version = "1.0.0"
edition = "2021"

[dependencies]
atty = "0.2"
chrono = "0.4"
clap = { version = "3.2", features = ["derive"] }
glob = "0.3"
owo-colors = "3"
subprocess = "0.2"
timeout-readwrite = "0.3.3"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
