[package]
name = "nso-log-reader"
version = "1.0.0"
edition = "2021"

[dependencies]
atty = "0.2.14"
chrono = "0.4.37"
clap = { version = "4.5.4", features = ["derive"] }
glob = "0.3.1"
owo-colors = "4.0.0"
subprocess = "0.2.9"
timeout-readwrite = "0.3.3"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
